--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Germania+One&family=Syne&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    box-sizing:border-box
 }
-
+body {
+    background-color: white;
+    background-size: cover;
+    width: auto; height: auto;
+}
 #top {
-    background-image: url(img/top.png);
-    padding: 10px 10px 10px;
+    background-image: url(../img/top.png); height: 100%; width: auto;
+    padding: 10px 90px 10px 90px;
     margin-bottom: 20px;
     background-size: cover;
 }
@@ -17,4 +21,25 @@ h1 {
     font-family: 'Germania One', cursive;
     text-align: center;
     font-size: 20px;
+}
+.nav-text {
+    width: 100%;
+    text-align: right;
+}
+.nav-text a{
+    color: #fff;
+    text-decoration: none;
+    font-family: 'Syne', sans-serif;
+    font-size: 15px;
+    padding: 20px;
+}
+.nav-logo {
+    text-align: left;
+}
+.nav {
+    display: flex;
+}
+
+@media only screen and (max-width: 1440px) {
+
 }
