--- a/css/style.css
+++ b/css/style.css
@@ -3,25 +3,29 @@
 * {
     margin: 0px;
     padding: 0px;
-    box-sizing:border-box
+    box-sizing: border-box
 }
+
 body {
     font-family: 'Syne', sans-serif;
     font-size: 18px;
     font-weight: 100;
 }
+
 h2 {
     color: #fff;
     font-family: 'Germania One', cursive;
     font-size: 60px;
     font-weight: 100;
 }
+
 h3 {
     color: #323131;
     font-family: 'Germania One', cursive;
     font-size: 48px;
     font-weight: 100;
 }
+
 #top {
     background-image: url(../img/top.png);
     background-position: center;
@@ -32,11 +36,15 @@ h3 {
     justify-content: flex-end;
     align-items: center;
 }
+
 #nav {
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 5;
+    background-color: #500c7a96
 }
+
 .nav-container {
     width: 90%;
     max-width: 1440px;
@@ -45,33 +53,40 @@ h3 {
     justify-content: space-between;
     padding: 15px 0;
 }
+
 .nav-text {
     display: flex;
     align-items: center;
 }
-.nav-text a{
+
+.nav-text a {
     color: #fff;
     text-decoration: none;
     margin-left: 30px;
 }
-.explore {    
+
+.explore {
     width: 50%;
     color: #fff;
     padding-right: 50px;
 }
+
 .explore p {
     margin-right: 30%;
     font-size: 18px;
 }
+
 .button {
     display: flex;
     margin-top: 48px;
 }
+
 .button a {
     color: #fff;
     display: flex;
     padding: 20px 75px;
 }
+
 .button .explore2 {
     text-decoration: none;
     text-transform: uppercase;
@@ -79,25 +94,32 @@ h3 {
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
 }
+
 #mid {
     background-image: url(/img/bawahnya-top.png);
-    background-repeat: no-repeat, no-repeat;   
-    max-height: 461px; width: 100%;
+    background-repeat: no-repeat, no-repeat;
+    max-height: 461px;
+    width: 100%;
     background-size: cover;
 }
+
 .logo2 {
     text-align: center;
     padding-top: 139px;
     padding-bottom: 41px;
 }
+
 .about .floating-island {
     position: absolute;
-    top: -112px; right: -37px;
+    top: -112px;
+    right: -37px;
     size: 100%;
 }
+
 .about {
     background-color: #fff6ec;
-    max-height: 632px; max-width: 1024px;
+    max-height: 632px;
+    max-width: 1024px;
     background-position: center;
     margin-left: auto;
     margin-right: auto;
@@ -105,47 +127,57 @@ h3 {
     margin-bottom: 0;
     padding-bottom: 68px;
 }
+
 .about h3 {
     padding: 44px 328px 18px 54px;
 }
+
 .about .p1 {
     margin-left: 51px;
 }
+
 .about .dices {
     position: absolute;
     right: 24px;
     bottom: 33px;
 }
+
 .border {
     border-left: 5px solid #d9c1a4;
     margin-left: 51px;
 }
+
 .border p {
     padding-left: 26px;
 }
+
 .about p {
     margin-right: 90px;
 }
-#campaign h3{
+
+#campaign h3 {
     padding-top: 506px;
     text-align: center;
-    position:relative;
+    position: relative;
     color: #323131;
 }
+
 .slide-wrapper {
     margin-top: 45px;
     align-items: center;
     display: flex;
     justify-content: space-between;
 }
+
 .gradient {
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0,0,0,0));
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
     height: 50%;
     width: 100%;
     position: absolute;
     bottom: 0;
     left: 0;
 }
+
 .slide-card {
     width: 30%;
     border: solid 3px #500c7a;
@@ -154,36 +186,43 @@ h3 {
     position: relative;
     margin-left: 20px;
 }
+
 .slide-card a {
     display: block;
     width: 100%;
     height: 100%;
     position: relative;
 }
+
 #arkemyr {
     background-image: url(/img/castle.jpg);
     background-position: 35% 50%;
     background-size: cover;
 }
+
 #burning-tale {
     background-image: url(/img/feywild.jpg);
     background-position: 60% 50%;
     background-size: cover;
 }
+
 #leviathan {
     background-image: url(/img/pirate.jpg);
     background-position: 60% 50%;
     background-size: cover;
 }
+
 #doa {
     background-image: url(/img/tavern.jpg);
     background-position: 20% 50%;
     background-size: cover;
 }
-.slide-card .campaign-logo img{
+
+.slide-card .campaign-logo img {
     display: block;
     width: 100%;
 }
+
 .campaign-logo {
     bottom: 30px;
     width: 100%;
@@ -192,19 +231,24 @@ h3 {
     display: flex;
     justify-content: center;
 }
+
 #arkemyr.campaign-logo {
     bottom: 45px;
     padding: 10px 25px;
 }
-#burning-tale .campaign-logo img{
+
+#burning-tale .campaign-logo img {
     max-width: 331px;
 }
-#leviathan .campaign-logo img{
+
+#leviathan .campaign-logo img {
     max-width: 258px;
 }
-#doa .campaign-logo img{
+
+#doa .campaign-logo img {
     max-width: 231px;
 }
+
 .campaign-slide-nav {
     margin-top: 25px;
     font-size: 24px;
@@ -213,20 +257,104 @@ h3 {
     justify-content: flex-end;
 }
 
-.campaign-slide-nav > * {
+.campaign-slide-nav a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+}
+
+.campaign-slide-nav a:hover {
+    background-color: #500c7a;
+    color: #fff
+}
+
+.previous {
+    background-color: #ffffff00;
+    color: #500c7a;
     border: solid 2px #500c7a;
+}
+
+.next {
+    background-color: #ffffff00;
+    color: #500c7a;
+    border: solid 2px #500c7a;
+}
+#newsletter {
+    text-align: center;
+    padding: 55px;
+    background: #efefef;
+    position: relative;
+    margin: 115px 0 50px;
+}
+#newsletter::after {
+    content: '';    
+    background: url(../img/shelves.png);
+    background-position: 50% 70%;
+    opacity: 0.07;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.newsletter-content {
+    max-width: 770px;
+    width: 90%;
+    margin: 0 auto;
+    position: relative;
+    z-index: 5;
+}
+.newsletter-content h3 {
+    color: #500c7a;
+}
+.newsletter-content p {
+    margin: 20px 0;
+}
+.newsletter-content form {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60px;
-    height: 60px;
+    justify-content: space-between;
+}
+.newsletter-content input {
+    width: 89%;
+    border: solid 2px #500c7a;
+    padding: 15px;
+}
+.newsletter-content input::placeholder {
+    color: #a996b2;
+    font-family: 'Syne', sans-serif;
+}
+
+.newsletter-content button {
+    width: 10%;
+    background-image: linear-gradient(to right, #500c7a, #9f2f87);
+    border: none;    
+    font-family: 'Syne', sans-serif;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 8px;
     cursor: pointer;
 }
-
-.slide-prev {
-    margin-right: -2px;
+.newsletter-content button:hover {
+    background: #500c7a;
 }
 
-@media only screen and (max-width: 1440px) {
-
+#attribution {
+    background: #500c7a;
+    color: #fff;
+    padding: 40px 0;
 }
+
+#attribution a{
+    background: #febf46;
+    color: #000;
+    text-decoration: none;
+}
+#attribution a:hover{
+    background: #da6d14;
+    color: #fff;
+}
+
+@media only screen and (max-width: 1440px) {}
