--- a/css/style.css
+++ b/css/style.css
@@ -368,12 +368,23 @@ h3 {
 }
 
 @media only screen and (max-width: 1440px) {}
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 600px) {
+    #top {
+        padding: 0;
+    }
+    .nav {
+        width: 90%;
+    }
+    .about-content p {
+        font-size: 16px;
+        line-height: 17px;
+}
+@media only screen and (max-width: 320px) {
     body {
-        font-size: 14px;
+        font-size: 12px;
     }
     h3 {
-        font-size: 26px;
+        font-size: 17px;
     }
     .float-img {
         display: none;
@@ -382,8 +393,8 @@ h3 {
         padding-top: 50px;
     }
     .about-content p {
-        font-size: 14px;
-        line-height: 18px;
+        font-size: 12px;
+        line-height: 15px;
     }
     .about-content h3 {
         margin-bottom: 15px;
