--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ h3 {
     padding-left: 26px;
 }
 
-.about p {
+.about-content p {
     margin-right: 90px;
 }
 
@@ -368,7 +368,7 @@ h3 {
 }
 
 @media only screen and (max-width: 1440px) {}
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
     #top {
         padding: 0;
     }
@@ -376,12 +376,12 @@ h3 {
         width: 90%;
     }
     .about-content p {
-        font-size: 16px;
-        line-height: 17px;
+        font-size: 14px;
+        line-height: 15px;
 }
 @media only screen and (max-width: 320px) {
     body {
-        font-size: 12px;
+        font-size: 11px;
     }
     h3 {
         font-size: 17px;
@@ -393,8 +393,8 @@ h3 {
         padding-top: 50px;
     }
     .about-content p {
-        font-size: 12px;
-        line-height: 15px;
+        font-size: 11px;
+        line-height: 10px;
     }
     .about-content h3 {
         margin-bottom: 15px;
